--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --color-border-dark: #dbdbdb;
   --color-shadow-light: #d2d6d8;
   --color-shadow-blue: #4988c4d3;
-  --color-focus: #50b5ff;
+  --color-focus: hsl(219, 100%, 64%);
   --color-error: #dc3545;
 
   /* Sizes */
