--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -9,3 +9,12 @@
   padding: 0;
   margin: 0;
 }
+
+.listItem {
+  position: relative;
+}
+
+.listItem:not(:last-child) {
+  border-bottom: 2px solid var(--color-border-light);
+  margin-bottom: 1rem;
+}
